--- a/demo.html
+++ b/demo.html
@@ -175,7 +175,45 @@
 						<div class="container col-md-4"><img class="img-responsive" src="image/10%off.png"></div>
 						<div class="container col-md-4"><img class="img-responsive" src="image/15%off.png"></div>
 					</div>
-					<div class="container col-md-12 col-sm-12 col-xs-12" id="bodyWithComercial">body with comercial area</div>
+
+					<div class="container col-md-12 col-sm-12 col-xs-12" id="bodyWithComercial">
+						<div class="leftBodyWithCommercial container col-md-10 col-sm-10 col-xs-12">
+							<img class="" src="image/countDownTime.png">
+							<div class="container col-md-12 col-sm-12 col-xs-12">
+								<ul class="SaleCountdownProduct">
+							<li class="col-md-4">
+								<img class="img-responsive" src="image/SaleCountDown1.png">
+								<b>Horny Production</b>
+								<br>
+								Damm Realistic Cock
+								<br> <span style="text-decoration: line-through;"><b>$412.60</b></span><span style="text-decoration-color: pink">   $36.90</span> <span style="text-decoration-color : grey">   ( 50% OFF)</span>
+								<img src="image/4Stars.png">
+							</li>
+							<li class="col-md-4">
+								<img class="img-responsive" src="image/SaleCountDown2.png">
+								<b>Fun Factory sapphic premiere lovers</b>
+								<br>
+								A new Beginning
+								<br> <span style="text-decoration: line-through;"><b>$412.60</b></span><span style="text-decoration-color: pink">   $36.90</span> <span style="text-decoration-color : grey">   ( 50% OFF)</span>
+								<img src="image/4Stars.png">
+							</li>
+							<li class="col-md-4">
+								<img class="img-responsive" src="image/SaleCountDown3.png">
+								<b>Fun Factory premiere couple pinky starter </b>
+								<br>
+								Kinky Night!
+								<br> <span style="text-decoration: line-through;"><b>$267.60</b></span><span style="text-decoration-color: pink">   224.60</span> <span style="text-decoration-color : grey">   ( 50% OFF)</span>
+								<img src="image/4Stars.png">
+							</li>
+							
+						</ul>
+							</div>
+						</div>
+						<div class="rightBodyWithCommercial container col-md-2 col-sm-2 col-xs-12">
+							<img class="img-responsive" src="image/bodyAds.png">\
+						</div>
+					</div>
+
 					<div class="container col-md-12 col-sm-12 col-xs-12" id="sotreInStore">store in store area</div>
 					<div class="container col-md-12 col-sm-12 col-xs-12" id="feedBack">feedback area</div>
 					<div class="container col-md-12 col-sm-12 col-xs-12" id="coOp">Copoperate area</div>
