--- a/demo522020.html
+++ b/demo522020.html
@@ -47,10 +47,12 @@
 			<div class="main container-fluid col-md-10 col-sm-10 col-xs-10" id="">
 				<!-- the shocking comercials -->
 				<div class="theShockingComercial container " >
+					<div class="row">
+						<div class="container row col-md-9 col-sm-8 col-xs-12" style="text-align: left;"> <big> <font size="+1">INSIDER DEAL HURRAY COUNTING DOWN TO SEPTEMBER SALES. UP TO 80% OFF</font></big></div>
+						<!-- the right side of the comercials -->
+						<a class="shockkingComercialRight container row col-md-3 col-sm-4 col-xs-12" style="float: right; text-align: right;"> <big>SHOP NOW <i class="<i class="	fas fa-arrow-right"></i>"></i></big></a>
+					</div>
 					<!-- the left side of the comercial-->
-					<div class="container row col-md-9 col-sm-8 col-xs-12" style="text-align: left;"> <big> <font size="+1">INSIDER DEAL HURRAY COUNTING DOWN TO SEPTEMBER SALES. UP TO 80% OFF</font></big></div>
-					<!-- the right side of the comercials -->
-					<a class="container row col-md-3 col-sm-4 col-xs-12" style="float: right; text-align: right;"> <big>SHOP NOW <i class="<i class="	fas fa-arrow-right"></i>"></i></big></a>
 				</div>
 				
 				<!-- the search area-->
@@ -332,7 +334,7 @@
 			</div>
 
 			<div class="feedBack container" id="">
-					<img class="img-responsive" style="width: 100%" src="image/feedbackTitle.png">
+				<img class="img-responsive" style="width: 100%" src="image/feedbackTitle.png">
 				
 
 				<ul class="feedbackProperties">
