--- a/demo722020_morning.html
+++ b/demo722020_morning.html
@@ -321,6 +321,7 @@
 
 				<div class="storeInStore container " id="">
 
+				<div class="storeInStore container " id="">
 					<img class="img-responsive" src="image/storeInStoreTitle.png" alt="StoreInStoreTitle">
 
 					<ul class="storeInStoreProperties">
@@ -343,7 +344,10 @@
 				<div class="feedBack container" id="">
 					<img class="img-responsive" style="width: 100%" src="image/feedbackTitle.png" alt="feedbackTitle">
 
+				</div>
 
+				<div class="feedBack container" id="">
+					<img class="img-responsive" style="width: 100%" src="image/feedbackTitle.png" alt="feedbackTitle">
 					<ul class="feedbackProperties">
 						<div class="row">
 							<li class="col-md-3 col-sm-6 col-xs-12">
@@ -482,6 +486,28 @@
 								<button class="mailButton " type="button">Sign up</button>
 							</div>
 
+								</div>
+								<div class=" col-md-4 col-sm-4 col-xs-4">
+									<b>About us</b>
+									<br>
+									<br>about us
+									<br>contact us
+									<br>FAQs
+									<br>classes and seminar
+									<br>blog post
+									<br>Wholesale and drop
+									<br>Shipping
+								</div>
+							</div>
+						</div>
+						<div class="footerRight col-md-6 col-sm-12 col-xs-12">
+							<div class="footerResearch conatiner col-md-12">
+								<b>STAY IN TOUCH</b>
+								<br> subcribe to our newsletter & get FREE SHIPPING on your first order
+								<br><a href="#">View our policy</a>
+								<br><input type="text" name="EnterYourMail" placeholder="Enter Your Mail here">
+								<button class="mailButton " type="button">Sign up</button>
+							</div>
 						</div>
 					</div>
 				</div>
