--- a/demo_withProperties.html
+++ b/demo_withProperties.html
@@ -18,58 +18,59 @@
 </head>
 <body>
 	<!-- start-->
-	<div class="theDivContainAll container-fluid">
+	<div class="thedivcontainall container-fluid">
 		<!-- start the header-->
 		<div class="header row">
 			<!-- the first big navigator-->
-			<div class="BigNavigator navbar-brand">
+			<div class="bignavigator navbar-brand">
 				<!-- navigator left -->
-				<div class="BigNavigatorLeft col-md-6">
-					<div class="BigNavigatorLeftContent">
-						<font size="2"><b></b>FREE SHIPING ABOVE |  SAME DAY DELIVERY</font>
+				<div class="bignavigatorleft col-md-6 col-sm-6 col-xs-12">
+					<div class="bignavigatorleftcontent">
+						<font size="2"><b>FREE SHIPING ABOVE |  SAME DAY DELIVERY</b></font>
 					</div>
 				</div>
 				<!-- navigator right -->
 				<div class="row">
-					<div class="BigNavigatorRight col-md-6">
-						<div class="BigNavigatorRightProperties col-md" class="fa fa-question-circle-o"><font size="2">Contact US</font></div>
-						<div class="BigNavigatorRightProperties col-md"><font size="2">Help</font></div>
-						<div class="BigNavigatorRightProperties col-md"><font size="2">Log out</font></div>
-						<div class="BigNavigatorRightProperties col-md" class="fa fa-user-o"><font size="2">Account</font></div>
-						<div class="BigNavigatorRightProperties col-md" class="fa fa-shopping-bag"><font size="2">Shopping Bag</font></div>
+					<div class="nignavigatorright col-md-6 col-sm-6 col-xs-12">
+						<div class="nignavigatorrightproperties col-md" class="fa fa-question-circle-o"><font size="2">Contact US</font></div>
+						<div class="nignavigatorrightproperties col-md"><font size="2"><i class="fa fa-question-circle-o"></i>  Help</font></div>
+						<div class="nignavigatorrightproperties col-md"><font size="2">Log out</font></div>
+						<div class="nignavigatorrightproperties col-md" class="fa fa-user-o"><font size="2"><i class="fa fa-user-o"></i> Account</font></div>
+						<div class="nignavigatorrightproperties col-md" class="fa fa-shopping-bag"><font size="2">Shopping Bag</font></div>
 					</div>
 				</div>
 			</div>
 			<!-- end of navigator-->
-			<div class="ShockingComercial navbar">
+			<!-- start of the shocking comercial-->
+			<div class="shockingcomercial navbar">
 				<div class="row">
-					<div class="ShockingComercialLeft ">
+					<div class="shockingcomercialleft ">
 						<font size="+2">INSIDER DEALS HURRAY COUNTING DOWN. SALES UP TO 80% OFF</font>
 					</div>
-					<div class="ShockingComercialRight ">
+					<div class="shockingcomercialright ">
 						<a href="" style="color: white"><font size="+">SHOP NOW -></font><b></b></a>
 					</div>
 				</div>
 			</div>
 			<!--end of the shocking comercial -->
 			<!-- logo image-->
-			<div class="SearchArea">
+			<div class="searcharea">
 				<div class="row">
-					<div class="searchAreaProperty col-md-3"> <img class="img-responsive" alt="icon" src="image/horny.png"></div>
-					<div class="searchAreainput col-md-6"> 
+					<div class="searchareaproperties col-md-3 col-sm-12 col-xs-12"> <img class="img-responsive" alt="icon" src="image/horny.png"></div>
+					<div class="searchareainput col-md-6 col-sm-12 col-xs-12"> 
 
 						<input type="text" placeholder="Search the entire shop here">
 						<button class="" type="button"><i class="fa fa-search" style="color: white"></i></button>
 					</div>
-					<div class="searchAreaProperty col-md-3"> 
-						<div class="contatctInSearch col-xs-12"><font size="+1"><b> Call / SMS/ What's App</b></font></div>
-						<div class="container col-md-12 col-sm-12 col-xs-12" style="clear: both; float: right"><font size="+3"><b>+6597772176</b></font></div>
+					<div class="searchareaproperties col-md-3 col-sm-12 col-xs-12"> 
+						<div class="contactinsearch"><font size="+1"><b> Call / SMS/ What's App</b></font></div>
+						<div class="contactinsearch"><font size="+3"><b>+6597772176</b></font></div>
 					</div>
 				</div>
 			</div>
 			<!-- product navigator-->
-			<div class="ProductNavigator">
-				<ul class="navigatorProperties">
+			<div class="productnavigator">
+				<ul class="navigatorproperties">
 					<div class="row">
 						<li class="col-md-1 "> <a href="#"> <b><font size="+1"></font></b></a></li>
 						<li class="col-md-1 "> <a href="#"> <b><font size="+1">MEN</font></b></a></li>
@@ -88,11 +89,11 @@
 		<!-- end of header-->
 
 		<div class="body">
-			<div class="Slider">
+			<div class="slider">
 				<img src="image/welcome.png " alt="welcomePage" class="img-responsive">
 			</div>
-			<div class="Certificate row">
-				<ul class="CertificateProperties">
+			<div class="certificate row">
+				<ul class="certificateproperties">
 					<div class="row">
 						<li class="col-md-2"><img alt="10%cashBack" src="image/cashBack.png">
 							<div>10% Cash Back</div>
@@ -116,17 +117,17 @@
 				</ul>
 			</div>
 			<!-- sub navigator bar-->
-			<div class="ProductHot">
-				<div class="subNavigator navbar-inverse">
+			<div class="producthot">
+				<div class="subnavigator navbar-inverse">
 
-					<div class="SubNavigatorLeft col-md-5">
+					<div class="subnavigatorleft col-md-5">
 						<div class="row">
-							<div class="SubNavigatorLeftProperties col-md-6" style="color: white;"><a href="">NEW PRODUCT</a></div>
-							<div class="SubNavigatorLeftProperties col-md-6" style="color: white;"><a href="">View All New...</a></div>
+							<div class="subnavigatorleftproperties col-md-6" style="color: white;"><a href="">NEW PRODUCT</a></div>
+							<div class="subnavigatorleftproperties col-md-6" style="color: white;"><a href="">View All New...</a></div>
 						</div>	
 					</div>
 
-					<div class="SubNavigatorRight col-md-7">
+					<div class="subnavigatorright col-md-7">
 						<ul>
 							<div class="row">
 								<li class="col-md-3"><a href="">Female</a></li>
@@ -138,35 +139,35 @@
 					</div>				
 				</div>
 				<!-- List of product by categories-->
-				<div class="ProductList" >
+				<div class="productlist" >
 					<div class="row">
-						<div class="ProductListProperties col-md-3">
-							<img src="image/1stProduct.png" alt="Product image hot" class="ProductImgHot">
-							<button class="addToCartButton" type="button">ADD TO CART</button>
+						<div class="productlistproperties col-md-3">
+							<img src="image/1stProduct.png" alt="Product image hot" class="productimghot">
+							<button class="addtocartbutton" type="button">ADD TO CART</button>
 							<br>
 							Damm Realistic Cock
 							<br> <span style="text-decoration: line-through;"><b>$412.60</b></span><span style="text-decoration-color: pink">   $36.90</span> <span style="text-decoration-color : grey">   ( 50% OFF)</span>
 							<img src="image/4Stars.png" alt="4Star">
 						</div>
-						<div class="ProductListProperties col-md-3">
-							<img src="image/2ndProduct.png" alt="2ndProductList" class="ProductImgHot">
-							<button class="addToCartButton" type="button">ADD TO CART</button>
+						<div class="productlistproperties col-md-3">
+							<img src="image/2ndProduct.png" alt="2ndProductList" class="productimghot">
+							<button class="addtocartbutton" type="button">ADD TO CART</button>
 							<br>
 							Damm Realistic Cock
 							<br> <span style="text-decoration: line-through;"><b>$412.60</b></span><span style="text-decoration-color: pink">   $36.90</span> <span style="text-decoration-color : grey">   ( 50% OFF)</span>
 							<img src="image/4Stars.png" alt="4Star">
 						</div>
-						<div class="ProductListProperties col-md-3">
-							<img src="image/3rdProduct.png" alt="3rdProduct in List" class="ProductImgHot">
-							<button class="addToCartButton" type="button">ADD TO CART</button>
+						<div class="productlistproperties col-md-3">
+							<img src="image/3rdProduct.png" alt="3rdProduct in List" class="productimghot">
+							<button class="addtocartbutton" type="button">ADD TO CART</button>
 							<br>
 							Damm Realistic Cock
 							<br> <span style="text-decoration: line-through;"><b>$412.60</b></span><span style="text-decoration-color: pink">   $36.90</span> <span style="text-decoration-color : grey">   ( 50% OFF)</span>
 							<img src="image/4Stars.png" alt="4Star">
 						</div>
-						<div class="ProductListProperties col-md-3">
-							<img src="image/4thProduct.png" alt="4th Prodcut in list" class="ProductImgHot">
-							<button class="addToCartButton" type="button">ADD TO CART</button>
+						<div class="productlistproperties col-md-3">
+							<img src="image/4thProduct.png" alt="4th Prodcut in list" class="productimghot">
+							<button class="addtocartbutton" type="button">ADD TO CART</button>
 							<br>
 							Damm Realistic Cock
 							<br> <span style="text-decoration: line-through;"><b>$412.60</b></span><span style="text-decoration-color: pink">   $36.90</span> <span style="text-decoration-color : grey">   ( 50% OFF)</span>
@@ -175,7 +176,7 @@
 					</div>
 					
 				</div>
-				<div class="viewMoreLink">
+				<div class="viewmorelink">
 					<a href="">View all Female toys -></a>
 				</div>
 				<!-- the 5 10 15% sale comercial -->
@@ -190,16 +191,16 @@
 			</div>
 
 			<!-- the bbody with comercial-->
-			<div class="bodyWithComercial">
-				<div class="bodyWithComercial_leftSide">
-					<img src="image/BodyWIthComercialTItle.png" alt="BodyWIthComercialTitle" class="bodyWithComercialTitle">
-					<div class="onSaleWithTimeCountDown">
+			<div class="bodywithcomercial">
+				<div class="bodywithcomercial_leftside">
+					<img src="image/BodyWIthComercialTItle.png" alt="bodywithcomercialtitle" class="bodywithcomercialtitle">
+					<div class="onsalewithtimecountdown">
 						<div class="row">
 							<div class="col-md-4">
-								<div class="OnSaleImg">
+								<div class="onsaleimg">
 									<img src="image/SaleCountDown1.png" alt="saleCountDown" class="saleCountdownImg img-responsive">
 								</div>
-								<div class="OnSaleDescription">
+								<div class="onsaledescription">
 									<br>
 									<b>Horny Production</b>
 									<br>Miss Kimochi viberator
@@ -209,10 +210,10 @@
 								</div>
 							</div>
 							<div class="col-md-4">
-								<div class="OnSaleImg">
+								<div class="onsaleimg">
 									<img src="image/SaleCountDown2.png" alt="saleCountDown" class="saleCountdownImg img-responsive">
 								</div>
-								<div class="OnSaleDescription">
+								<div class="onsaledescription">
 									<br>
 									<b>Horny Production</b>
 									<br>Miss Kimochi viberator
@@ -222,10 +223,10 @@
 								</div>
 							</div>
 							<div class="col-md-4">
-								<div class="OnSaleImg">
+								<div class="onsaleimg">
 									<img src="image/SaleCountDown3.png" alt="saleCountDown" class="saleCountdownImg img-responsive">
 								</div>
-								<div class="OnSaleDescription">
+								<div class="onsaledescription">
 									<br>
 									<b>Horny Production</b>
 									<br>Miss Kimochi viberator
@@ -235,32 +236,32 @@
 								</div>
 							</div>
 						</div>
-						<div class="viewMoreLink2">
+						<div class="viewmorelink2">
 							<a href="">View More -></a>
 						</div>
 					</div>
-					<div class="ShopByCategories">
-						<div class="ShopByCategoriesTitle">
+					<div class="shopbycategories">
+						<div class="shopbycategoriestitle">
 							<b><h1>SHOP BY CATEGORIES</h1></b>
 							<img src="image/Rectangle.png" alt="small Rectangle">
 						</div>
-						<div class="ShopByCategoriesProperties">
+						<div class="shopbycategoriesproperties">
 							<div class="row">
 								<div class="col-md-4">
 									<img src="image/dildo.png" alt="dildo img" class="img-responsive">
-									<div class="ShopByCategoriesDescription">
+									<div class="shopbycategoriesdescription">
 										<b>Dildos</b>
 									</div>
 								</div>
 								<div class="col-md-4">
 									<img src="image/penisRing.png" alt="penis ring img" class="img-responsive">
-									<div class="ShopByCategoriesDescription">
+									<div class="shopbycategoriesdescription">
 										<b>Penis Rings</b>
 									</div>
 								</div>
 								<div class="col-md-4">
 									<img src="image/lubricent.png" class="img-responsive" alt="lubricent img">
-									<div class="ShopByCategoriesDescription">
+									<div class="shopbycategoriesdescription">
 										<b>Lubricent</b>
 									</div>
 								</div>
@@ -268,19 +269,19 @@
 							<div class="row">
 								<div class="col-md-4">
 									<img src="image/SMFetish.png" class="img-responsive" alt="SM fetish">
-									<div class="ShopByCategoriesDescription">
+									<div class="shopbycategoriesdescription">
 										<b>SM Fetish</b>
 									</div>
 								</div>
 								<div class="col-md-4">
 									<img src="image/viberator.png" class="img-responsive" alt="viberator">
-									<div class="ShopByCategoriesDescription">
+									<div class="shopbycategoriesdescription">
 										<b>Viberators</b>
 									</div>
 								</div>
 								<div class="col-md-4">
 									<img src="image/masterbation.png" alt="masterbator" class="img-responsive">
-									<div class="ShopByCategoriesDescription">
+									<div class="shopbycategoriesdescription">
 										<b>Masterbators</b>
 									</div>
 								</div>
@@ -288,17 +289,17 @@
 						</div>
 					</div>
 				</div>
-				<div class="bodyWithComercial_rightSide">
+				<div class="bodywithcomercial_rightside">
 					<img src="image/banner right.png" alt="right comercial banner">
 				</div>
 			</div>
 			<!-- end of body with comercials -->
-			<div class="StoreInStore">
-				<div class="StoreInStoreTitle">
+			<div class="storeinstore">
+				<div class="storeinstoretitle">
 					<b><h1 style="margin-left: 470px;">STORE IN STORE</h1></b>
 					<img src="image/Rectangle.png" alt="small rectangle">
 				</div>
-				<div class="StoreInStoreBody">
+				<div class="storeinstorebody">
 					<div class="col-md-3"><img src="image/storeInStoreProduct.png" class="img-responsive" alt="store in store img"></div>
 					<div class="col-md-3"><img src="image/storeInStoreProduct.png" class="img-responsive" alt="store in store img"></div>
 					<div class="col-md-3"><img src="image/storeInStoreProduct.png" class="img-responsive" alt="store in store img"></div>
@@ -306,12 +307,12 @@
 				</div>
 			</div>
 			<!-- end of store in store, start of feedback-->
-			<div class="FeedBack">
-				<div class="FeedBackTitle">
+			<div class="feedback">
+				<div class="feedbacktitle">
 					<b><h1 style="margin-left: 400px;">WHAT CUSTOMER ARE SAYING</h1></b>
 					<img alt="small rectangle" src="image/Rectangle.png">
 				</div>
-				<div class="FeedBackBody">
+				<div class="feedbackbody">
 					<div class="col-md-3"><img alt="feedback image" src="image/feedbackHornyProduct.png" class="feedbackimg img-responsive">
 						<b>Horny Products</b>
 						<br>
@@ -364,11 +365,11 @@
 				</div>
 			</div>
 			<!-- end of feedback-->
-			<div class="Feature">
+			<div class="feature">
 				<div class="row">
 					<div class=" col-md-2">
-						<b><h1 class="FeatureTitle" style="">Feature</h1></b>
-						<img class="FeatureTitleImg" alt="feature Title" src="image/Rectangle.png">
+						<b><h1 class="featuretitle" style="">Feature</h1></b>
+						<img class="featuretitleimg" alt="feature Title" src="image/Rectangle.png">
 					</div>
 					<div class="col-md-2"><img src="image/feature1.png" alt="feature image" class="img-responsive"></div>
 					<div class="col-md-2"><img src="image/feature2.png" alt="feature image" class="img-responsive"></div>
@@ -380,7 +381,7 @@
 		</div>
 		<div class="footer">
 			<div class="row">
-				<div class="footerRight col-md-6">
+				<div class="footerright col-md-6">
 					<b>Stay In Touch</b>
 					<br><br>
 					subcribe to our new newsletter & get your FREE SHIPPING on your first order
@@ -407,7 +408,7 @@
 					</div>
 					
 				</div>
-				<div class="footerLeft col-md-6">
+				<div class="footerleft col-md-6">
 					<div class="row">
 						<div class=" col-md-4">
 							<b>NEED HELP</b>
