--- a/demo_withProperties.html
+++ b/demo_withProperties.html
@@ -8,10 +8,8 @@
 	
 	<!-- jQuery library -->
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-
 	<!-- Latest compiled JavaScript -->
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
 	<link href="cssWithProperties.css" rel="stylesheet">
@@ -89,9 +87,41 @@
 		<!-- end of header-->
 
 		<div class="body row">
-			<div class="slider row">
-				<img src="image/welcome.png " alt="welcomePage" class="img-responsive">
-			</div>
+			
+				<div id="myCarousel" class="carousel slide row" data-ride="carousel">
+					<!-- Indicators -->
+					<ol class="carousel-indicators">
+						<li data-target="#myCarousel" data-slide-to="0" class="active"></li>
+						<li data-target="#myCarousel" data-slide-to="1"></li>
+						<li data-target="#myCarousel" data-slide-to="2"></li>
+					</ol>
+
+					<!-- Wrapper for slides -->
+					<div class="carousel-inner">
+						<div class="item active">
+							<img src="image/welcome.png" alt="Los Angeles">
+						</div>
+
+						<div class="item">
+							<img src="image/welcome.png" alt="Chicago" >
+						</div>
+
+						<div class="item">
+							<img src="image/welcome.png" alt="New york" >
+						</div>
+					</div>
+
+					<!-- Left and right controls -->
+					<a class="left carousel-control" href="#myCarousel" data-slide="prev">
+						<span class="glyphicon glyphicon-chevron-left"></span>
+						<span class="sr-only">Previous</span>
+					</a>
+					<a class="right carousel-control" href="#myCarousel" data-slide="next">
+						<span class="glyphicon glyphicon-chevron-right"></span>
+						<span class="sr-only">Next</span>
+					</a>
+				</div>
+			
 			<div class="certificate ">
 				<ul class="certificateproperties">
 					<div class="row">
@@ -266,7 +296,7 @@
 										<b>Lubricent</b>
 									</div>
 								</div>
-							
+
 								<div class="col-md-4 col-xs-6">
 									<img src="image/SMFetish.png" class="img-responsive" alt="SM fetish">
 									<div class="shopbycategoriesdescription">
