--- a/demo_withProperties.html
+++ b/demo_withProperties.html
@@ -11,7 +11,9 @@
 	<!-- Latest compiled JavaScript -->
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-
+	<!-- java script -->
+	<script src="myJavaScript.js"></script>
+	
 	<link href="cssWithProperties.css" rel="stylesheet">
 </head>
 <body>
@@ -99,15 +101,15 @@
 					<!-- Wrapper for slides -->
 					<div class="carousel-inner">
 						<div class="item active">
-							<img src="image/welcome.png" alt="Los Angeles">
+							<img src="image/welcome.png" alt="Los Angeles" style="width: 100%">
 						</div>
 
 						<div class="item">
-							<img src="image/welcome.png" alt="Chicago" >
+							<img src="image/welcome.png" alt="Chicago" style="width: 100%">
 						</div>
 
 						<div class="item">
-							<img src="image/welcome.png" alt="New york" >
+							<img src="image/welcome.png" alt="New york" style="width: 100%">
 						</div>
 					</div>
 
