--- a/demo_withProperties.html
+++ b/demo_withProperties.html
@@ -11,10 +11,17 @@
 	<!-- Latest compiled JavaScript -->
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-	<!-- java script -->
+	<!-- java script : my  -->
 	<script src="myJavaScript.js"></script>
 	
 	<link href="cssWithProperties.css" rel="stylesheet">
+	<!-- slick js -->
+	<link rel="stylesheet" href="/path/to/slick.css">
+	<link rel="stylesheet" href="/path/to/slick-theme.css">
+	<!-- js livrary -->
+	<script src="/path/to/jquery.min.js"></script>
+	<script src="path/to/slick.min.js"></script>
+
 </head>
 <body>
 	<!-- start-->
@@ -88,41 +95,41 @@
 		</div>
 		<!-- end of header-->
 
-		<div class="body row">
+		<div class="body">
 			
-				<div id="myCarousel" class="carousel slide row" data-ride="carousel">
-					<!-- Indicators -->
-					<ol class="carousel-indicators">
-						<li data-target="#myCarousel" data-slide-to="0" class="active"></li>
-						<li data-target="#myCarousel" data-slide-to="1"></li>
-						<li data-target="#myCarousel" data-slide-to="2"></li>
-					</ol>
+			<div id="myCarousel" class="carousel slide row" data-ride="carousel">
+				<!-- Indicators -->
+				<ol class="carousel-indicators">
+					<li data-target="#myCarousel" data-slide-to="0" class="active"></li>
+					<li data-target="#myCarousel" data-slide-to="1"></li>
+					<li data-target="#myCarousel" data-slide-to="2"></li>
+				</ol>
 
-					<!-- Wrapper for slides -->
-					<div class="carousel-inner">
-						<div class="item active">
-							<img src="image/welcome.png" alt="Los Angeles" style="width: 100%">
-						</div>
-
-						<div class="item">
-							<img src="image/welcome.png" alt="Chicago" style="width: 100%">
-						</div>
-
-						<div class="item">
-							<img src="image/welcome.png" alt="New york" style="width: 100%">
-						</div>
+				<!-- Wrapper for slides -->
+				<div class="carousel-inner">
+					<div class="item active">
+						<img src="image/welcome.png" alt="Los Angeles" style="width: 100%">
 					</div>
 
-					<!-- Left and right controls -->
-					<a class="left carousel-control" href="#myCarousel" data-slide="prev">
-						<span class="glyphicon glyphicon-chevron-left"></span>
-						<span class="sr-only">Previous</span>
-					</a>
-					<a class="right carousel-control" href="#myCarousel" data-slide="next">
-						<span class="glyphicon glyphicon-chevron-right"></span>
-						<span class="sr-only">Next</span>
-					</a>
+					<div class="item">
+						<img src="image/welcome.png" alt="Chicago" style="width: 100%">
+					</div>
+
+					<div class="item">
+						<img src="image/welcome.png" alt="New york" style="width: 100%">
+					</div>
 				</div>
+
+				<!-- Left and right controls -->
+				<a class="left carousel-control" href="#myCarousel" data-slide="prev">
+					<span class="glyphicon glyphicon-chevron-left"></span>
+					<span class="sr-only">Previous</span>
+				</a>
+				<a class="right carousel-control" href="#myCarousel" data-slide="next">
+					<span class="glyphicon glyphicon-chevron-right"></span>
+					<span class="sr-only">Next</span>
+				</a>
+			</div>
 			
 			<div class="certificate ">
 				<ul class="certificateproperties">
@@ -280,38 +287,38 @@
 						</div>
 						<div class="shopbycategoriesproperties">
 							<div class="row">
-								<div class="col-md-4 col-xs-6">
+								<div class="col-md-4 col-xs-4">
 									<img src="image/dildo.png" alt="dildo img" class="img-responsive">
 									<div class="shopbycategoriesdescription">
 										<b>Dildos</b>
 									</div>
 								</div>
-								<div class="col-md-4 col-xs-6 ">
+								<div class="col-md-4 col-xs-4 ">
 									<img src="image/penisRing.png" alt="penis ring img" class="img-responsive">
 									<div class="shopbycategoriesdescription">
 										<b>Penis Rings</b>
 									</div>
 								</div>
-								<div class="col-md-4 col-xs-6">
+								<div class="col-md-4 col-xs-4">
 									<img src="image/lubricent.png" class="img-responsive" alt="lubricent img">
 									<div class="shopbycategoriesdescription">
 										<b>Lubricent</b>
 									</div>
 								</div>
 
-								<div class="col-md-4 col-xs-6">
+								<div class="col-md-4 col-xs-4">
 									<img src="image/SMFetish.png" class="img-responsive" alt="SM fetish">
 									<div class="shopbycategoriesdescription">
 										<b>SM Fetish</b>
 									</div>
 								</div>
-								<div class="col-md-4 col-xs-6">
+								<div class="col-md-4 col-xs-4">
 									<img src="image/viberator.png" class="img-responsive" alt="viberator">
 									<div class="shopbycategoriesdescription">
 										<b>Viberators</b>
 									</div>
 								</div>
-								<div class="col-md-4 col-xs-6">
+								<div class="col-md-4 col-xs-4">
 									<img src="image/masterbation.png" alt="masterbator" class="img-responsive">
 									<div class="shopbycategoriesdescription">
 										<b>Masterbators</b>
@@ -332,11 +339,12 @@
 					<b style="margin:auto"><h1>STORE IN STORE</h1></b>
 					<img src="image/Rectangle.png" alt="small rectangle">
 				</div>
-				<div class="storeinstorebody row">
+				<div class="storeinstorebody  row" id="storeinstorebody">
 					<div class="col-md-3 col-xs-6"><img src="image/storeInStoreProduct.png" class="img-responsive" alt="store in store img"></div>
 					<div class="col-md-3 col-xs-6"><img src="image/storeInStoreProduct.png" class="img-responsive" alt="store in store img"></div>
 					<div class="col-md-3 col-xs-6"><img src="image/storeInStoreProduct.png" class="img-responsive" alt="store in store img"></div>
 					<div class="col-md-3 col-xs-6" ><img src="image/storeInStoreProduct.png" class="img-responsive" alt="store in store img"></div>
+
 				</div>
 			</div>
 			<!-- end of store in store, start of feedback-->
