--- a/demo_withProperties.html
+++ b/demo_withProperties.html
@@ -22,14 +22,18 @@
 	<!-- js livrary -->
 	<script src="http:/path/to/jquery.min.js"></script>
 	<script src="http:/path/to/slick.min.js"></script>
-	
-	<!-- auto complete library-->
-	
+		<!-- auto complete library-->
+	<script type="text/javascript">
+		if( screen.width <= 560 ) {
+	    location.href = 'HornyPhone.html';
+	}
+	</script>
 
 </head>
+
 <body>
 	<!-- start-->
-	<div class="thedivcontainall container-fluid">
+	<div class="thedivcontainall container-fluid" id="desktop">
 		<!-- start the header-->
 		<div class="header">
 			<!-- the first big navigator-->
