--- a/demo_withProperties.html
+++ b/demo_withProperties.html
@@ -33,7 +33,7 @@
 
 <body>
 	<!-- start-->
-	<div class="thedivcontainall container-fluid" id="desktop">
+	<div class="thedivcontainall container-fluid">
 		<!-- start the header-->
 		<div class="header">
 			<!-- the first big navigator-->
