--- a/demo_withProperties.html
+++ b/demo_withProperties.html
@@ -739,28 +739,33 @@
 										<!-- Wrapper for slides -->
 										<div class="carousel-inner">
 											<div class="item active">
-
-												<div class="col-md-3 col-xs-6"><img class="featureimg" src="image/feature1.png" alt="feature image" class="img-responsive"></div>
-												<div class="col-md-3 col-xs-6"><img class="featureimg" src="image/feature2.png" alt="feature image" class="img-responsive"></div>
-												<div class="col-md-3 col-xs-6"><img class="featureimg" src="image/feature3.png" alt="feature image" class="img-responsive"></div>
-												<div class="col-md-3 col-xs-6"><img class="featureimg" src="image/feature4.png" alt="feature image" class="img-responsive"></div>
-
-											</div>
-
-											<div class="item">
-												<div class="col-md-3 col-xs-6"><img class="featureimg" src="image/feature2.png" alt="feature image" class="img-responsive"></div>
-												<div class="col-md-3 col-xs-6"><img class="featureimg" src="image/feature3.png" alt="feature image" class="img-responsive"></div>
-												<div class="col-md-3 col-xs-6"><img class="featureimg" src="image/feature4.png" alt="feature image" class="img-responsive"></div>
-												<div class="col-md-3 col-xs-6"><img class="featureimg" src="image/feature5.png" alt="feature image" class="img-responsive"></div>
+												<div class="col-md-2 col-xs-6"></div>
+												<div class="col-md-2 col-xs-6"><img class="featureimg" src="image/feature1.png" alt="feature image" class="img-responsive"></div>
+												<div class="col-md-2 col-xs-6"><img class="featureimg" src="image/feature2.png" alt="feature image" class="img-responsive"></div>
+												<div class="col-md-2 col-xs-6"><img class="featureimg" src="image/feature3.png" alt="feature image" class="img-responsive"></div>
+												<div class="col-md-2 col-xs-6"><img class="featureimg" src="image/feature4.png" alt="feature image" class="img-responsive"></div>
+												<div class="col-md-2 col-xs-6"><img class="featureimg" src="image/feature5.png" alt="feature image" class="img-responsive"></div>
 
 											</div>
 
 											<div class="item">
+												<div class="col-md-2 col-xs-6"></div>
+												<div class="col-md-2 col-xs-6"><img class="featureimg" src="image/feature1.png" alt="feature image" class="img-responsive"></div>
+												<div class="col-md-2 col-xs-6"><img class="featureimg" src="image/feature2.png" alt="feature image" class="img-responsive"></div>
+												<div class="col-md-2 col-xs-6"><img class="featureimg" src="image/feature3.png" alt="feature image" class="img-responsive"></div>
+												<div class="col-md-2 col-xs-6"><img class="featureimg" src="image/feature4.png" alt="feature image" class="img-responsive"></div>
+												<div class="col-md-2 col-xs-6"><img class="featureimg" src="image/feature5.png" alt="feature image" class="img-responsive"></div>
 
-												<div class="col-md-3 col-xs-6"><img class="featureimg" src="image/feature3.png" alt="feature image" class="img-responsive"></div>
-												<div class="col-md-3 col-xs-6"><img class="featureimg" src="image/feature4.png" alt="feature image" class="img-responsive"></div>
-												<div class="col-md-3 col-xs-6"><img class="featureimg" src="image/feature5.png" alt="feature image" class="img-responsive"></div>
-												<div class="col-md-3 col-xs-6"><img class="featureimg" src="image/feature1.png" alt="feature image" class="img-responsive"></div>
+											</div>
+
+											<div class="item">
+
+												<div class="col-md-2 col-xs-6"></div>
+												<div class="col-md-2 col-xs-6"><img class="featureimg" src="image/feature1.png" alt="feature image" class="img-responsive"></div>
+												<div class="col-md-2 col-xs-6"><img class="featureimg" src="image/feature2.png" alt="feature image" class="img-responsive"></div>
+												<div class="col-md-2 col-xs-6"><img class="featureimg" src="image/feature3.png" alt="feature image" class="img-responsive"></div>
+												<div class="col-md-2 col-xs-6"><img class="featureimg" src="image/feature4.png" alt="feature image" class="img-responsive"></div>
+												<div class="col-md-2 col-xs-6"><img class="featureimg" src="image/feature5.png" alt="feature image" class="img-responsive"></div>
 
 											</div>
 										</div>
