--- a/demo_withProperties.html
+++ b/demo_withProperties.html
@@ -70,9 +70,14 @@
 
 					<div class="searchareainput col-md-6 col-sm-12 col-xs-6"> 
 						<!-- input in input-->
-						<input type="text" placeholder="Search the entire shop here" name="search" id="search" style="position: relative;" class="">
-						<span style="clear: both;" id="match-list"></span>
-						<button class="" type="button"><i class="fa fa-search" style="color: white"></i></button>
+						<div class="row">
+							<input type="text" placeholder="Search the entire shop here" name="search" id="search" style="position: relative;" class="">
+							
+							<button class="" type="button"><i class="fa fa-search" style="color: white"></i></button>
+						</div>
+						<div class="row">
+							<span style="clear: both;" id="match-list"></span>
+						</div>
 					</div>
 					<div id="match-list"></div>
 
