--- a/demo_withProperties.html
+++ b/demo_withProperties.html
@@ -22,7 +22,6 @@
 	<script src="http:/path/to/jquery.min.js"></script>
 	<script src="http:/path/to/slick.min.js"></script>
 	<!-- auto complete library-->
-	<script src ="autocomplete.js"></script>
 	
 </head>
 
@@ -430,9 +429,9 @@
 		<!-- the 5 10 15% sale comercial -->
 		<div class="manualSales">
 			<div class="row">
-				<div class="col-md-4"><img src="image/5%off.png" alt="5%off" class="img-responsive"></div>
-				<div class="col-md-4"><img src="image/10%off.png" alt="10%off" class="img-responsive"></div>
-				<div class="col-md-4"><img src="image/15%off.png" alt="15%off" class="img-responsive"></div>
+				<div class="col-md-4"><img src="image/5phantram.png" alt="5%off" class="img-responsive"></div>
+				<div class="col-md-4"><img src="image/10phantram.png" alt="10%off" class="img-responsive"></div>
+				<div class="col-md-4"><img src="image/15phantram.png" alt="15%off" class="img-responsive"></div>
 			</div>
 		</div>
 		<div></div>
